--- a/index.html
+++ b/index.html
@@ -10,47 +10,58 @@
     <link href="header_and_violater.css" rel="stylesheet">
 </head>
 
-<body>
-    <div class="violater d-flex">
-        <p class='container-fluid text'>Want to check how your child is progressing? Sign up for a free diagnostic.</p>
+<body class="d-flex flex-column">
+    <!-- Violater & Nav Bar -->
+    <div class="violater">
+        <p class ="violater-text">Want to check how your child is progressing? Sign up for a free diagnostic.</p>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-light ">
-        <div class="container">
-            <a class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-center">
+        <div class="container-sm d-flex navcontainer">
+            <a class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="me-auto navbar-brand" href="#">
                 <img class="logo" src="assets/images/kinderpass-logo.png" alt="" width="30" height="24">
             </a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <div class="desktopview-navbar container-fluid">
+                <ul class="navbar-nav  mb-2 mb-lg-0">
+                    <li class="nav-item" >
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <img src="assets/images/dashboard/menu/home.png" alt="" >
+                            Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <li class="nav-item" >
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <img src="assets/images/dashboard/menu/discover.png" alt="">
+                            Discover</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <li class="nav-item" >
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <img src="assets/images/dashboard/menu/learn.png" alt="">
+                            Learn</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <li class="nav-item" >
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <img src="assets/images/dashboard/menu/shop.png" alt="">
+                            Shop</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <li class="nav-item" >
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <img src="assets/images/dashboard/menu/growth.png" alt="">
+                            Growth</a>
                     </li>
                 </ul>
             </div>
-            <div class="loginwrap d-flex">
+            <div class="loginwrap ">
                 <div class="dropdn d-flex">
                     <div class="nav-item dropdown childdropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Json
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Json
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Json</a></li>
+                            <li><a class="dropdown-item" href="#">Json</a></li>
                         </ul>
                     </div>
                 </div>
@@ -59,7 +70,39 @@
                 </button>
             </div>
         </div>
+        <div class="collapse mobile_view" id="navbarSupportedContent">
+            <ul class="navbar-nav  mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">
+                        <img src="assets/images/dashboard/menu/home.png" alt="" >
+                        Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">
+                        <img src="assets/images/dashboard/menu/discover.png" alt="" >
+                        Discover</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">
+                        <img src="assets/images/dashboard/menu/learn.png" alt="" >
+                        Learn</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">
+                        <img src="assets/images/dashboard/menu/shop.png" alt="" >
+                        Shop</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">
+                        <img src="assets/images/dashboard/menu/growth.png" alt="" >
+                        Growth</a>
+                </li>
+            </ul>
+        </div>
     </nav>
+    <!-- Violater & Nav Bar -->
+    <!-- Header Section -->
+    <!-- Header Section -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
