Responsive Blue containers on progress

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -11,7 +11,7 @@
     <link href="header.css" rel="stylesheet">
 </head>
 
-<body class="d-flex flex-column">
+<body class="w-100">
     <!-- Violater & Nav Bar -->
     <div class="violater">
         <p class="violater-text">Want to check how your child is progressing? Sign up for a free diagnostic.</p>
@@ -105,23 +105,25 @@
     <div class="centerWrapper">
         <!-- Header Section -->
         <section class="Header">
-            <div class="container HeaderContainer">
-                <div class="child_details row">
+            <div class="container child_details row HeaderContainer d-flex">
+                <!-- <div class="child_details d-flex row w-100"> -->
                     <div class="col-lg-7 col-sm-12 baby_details d-flex justify-content-start">
-                        <img src="assets/images/dashboard/image.jpg" alt="" class="babyImg">
-                        <div class="babyAge d-flex ">
+                        <div class ='col-sm-12 babyImg'>
+                            <img src="assets/images/dashboard/image.jpg" alt="" class="babyImg">
+                        </div>
+                        <div class="babyAge d-flex col-sm-4">
                             <div class="col">
                                 <h3>Today Json is</h3>
                                 <h5>3 Years , 4 Months</h5>
                             </div>
                         </div>
-                        <div class="babyheight d-flex">
+                        <div class="babyheight col-sm-4d-flex">
                             <div class="col">
                                 <h6>Height</h6>
                                 <h4>56.5 cm</h4>
                             </div>
                         </div>
-                        <div class="babyweight">
+                        <div class="babyweight col-sm-4">
                             <div class="col">
                                 <h6>Weight</h6>
                                 <h4>13.7 kg</h4>
@@ -139,7 +141,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </section>
         <!-- Header Section -->
