Finished Blue Container Completely

--- a/index.html
+++ b/index.html
@@ -105,32 +105,35 @@
     <div class="centerWrapper">
         <!-- Header Section -->
         <section class="Header">
-            <div class="container child_details row HeaderContainer d-flex">
+            <div class="container child_details HeaderContainer d-flex">
                 <!-- <div class="child_details d-flex row w-100"> -->
-                    <div class="col-lg-7 col-sm-12 baby_details d-flex justify-content-start">
-                        <div class ='col-sm-12 babyImg'>
+                    <div class="baby_details d-flex justify-content-start">
+                        <div class ='babyImg'>
                             <img src="assets/images/dashboard/image.jpg" alt="" class="babyImg">
                         </div>
-                        <div class="babyAge d-flex col-sm-4">
-                            <div class="col">
-                                <h3>Today Json is</h3>
-                                <h5>3 Years , 4 Months</h5>
+                        <div class="details_container d-flex">
+                            <div class="babyAge d-flex">
+                                <div class="col">
+                                    <h3>Today Json is</h3>
+                                    <h5>3 Years , 4 Months</h5>
+                                </div>
+                            </div>
+                            <div class="babyheight d-flex">
+                                <div class="col">
+                                    <h6>Height</h6>
+                                    <h4>56.5 cm</h4>
+                                </div>
+                            </div>
+                            <div class="babyweight ">
+                                <div class="col">
+                                    <h6>Weight</h6>
+                                    <h4>13.7 kg</h4>
+                                </div>
                             </div>
                         </div>
-                        <div class="babyheight col-sm-4d-flex">
-                            <div class="col">
-                                <h6>Height</h6>
-                                <h4>56.5 cm</h4>
-                            </div>
-                        </div>
-                        <div class="babyweight col-sm-4">
-                            <div class="col">
-                                <h6>Weight</h6>
-                                <h4>13.7 kg</h4>
-                            </div>
-                        </div>
+
                     </div>
-                    <div class="col-lg-3 col-sm-12 classDetails d-flex justify-content-start">
+                    <div class="classDetails d-flex justify-content-start">
                         <img src="assets/images/dashboard/book.png" alt="" class="book">
                         <div class="classpack_details d-flex flex-column">
                             <div class="remaining">
