Wrapping Up Header

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                     <h4>56.5 cm</h4>
                                 </div>
                             </div>
-                            <div class="babyweight ">
+                            <div class="babyweight d-flex">
                                 <div class="col">
                                     <h6>Weight</h6>
                                     <h4>13.7 kg</h4>
