--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="navbar_and_violater.css" rel="stylesheet">
     <link href="header.css" rel="stylesheet">
+    <link href="tabcardsslider.css" rel="stylesheet">
 </head>
 
 <body class="w-100">
@@ -148,7 +149,64 @@
             </div>
         </section>
         <!-- Header Section -->
+        <section class="tabcardsslider">
+            <div class="container">
+                <ul id="pills-tab" role="tablist" class="tabs nav nav-pills">
+                    <li class="nav-item" role="presentation">
+                    <a id="pills-classes-tab" class="tabs-link nav-link active" href="#pills-classes">Classes</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a id="pills-activities-tab" class="tabs-link nav-link active" href="#pills-activities">Activities</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a id="pills-articles-tab" class="tabs-link nav-link active" href="#pills-articles">Articles</a>
+                    </li>
+                </ul>
+                <div class="tabsContainer" id="pills-tabContent">
+                    <div id="" class="tab-pane show active " role="tabpanel" data-ride="carousel" aria-labelledby="pills-classes-tab">
+                        <div id="pills-classes" class="carousel-inner">
+                            <!-- <div class="carousel-item active"> -->
+                                <img class="d-block w-100" src="assets/images/dashboard/image.jpg" alt="First slide">
+                            </div>
+                            <div  class="carousel-item">
+                                <img class="d-block w-100" src="assets/images/dashboard/image.jpg" alt="Second slide">
+                            </div>
+                            <div id="pills-articles" class="carousel-item">
+                                <img class="d-block w-100" src="assets/images/dashboard/image.jpg" alt="Third slide">
+                            </div>
+                        </div>
+                    </div>
+                    <div id="" class="tab-pane " role="tabpanel"  aria-labelledby="pills-activities-tab">
+                        <div id="pills-activities" class="carousel-inner">
+                            <!-- <div class="carousel-item active"> -->
+                                <img class="d-block w-100" src="assets/images/dashboard/img01.jpg" alt="First slide">
+                            <!-- </div>
+                            <div class="carousel-item"> -->
+                                <img class="d-block w-100" src="assets/images/dashboard/img01.jpg" alt="Second slide">
+                            <!-- </div>
+                            <div class="carousel-item"> -->
+                                <img class="d-block w-100" src="assets/images/dashboard/img01.jpg" alt="Third slide">
+                            <!-- </div> -->
+                        </div> 
+                    </div>
+                    <div id="" class="tab-pane " role="tabpanel"  aria-labelledby="pills-articles-tab">
+                        <!-- <div class="carousel-inner"> -->
+                            <!-- <div class="carousel-item active"> -->
+                                <img class="d-block w-100" src="assets/images/dashboard/image.jpg" alt="First slide">
+                            <!-- </div> -->
+                            <!-- <div class="carousel-item"> -->
+                                <img class="d-block w-100" src="assets/images/dashboard/image.jpg" alt="Second slide">
+                            <!-- </div> -->
+                            <!-- <div class="carousel-item"> -->
+                                <img class="d-block w-100" src="assets/images/dashboard/image.jpg" alt="Third slide">
+                            <!-- </div> -->
+                        <!-- </div> -->
+                    </div>
+                </div>
+            <div>
+        </section>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
