--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="navbar_and_violater.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/slick/slick.css">
     <link href="header.css" rel="stylesheet">
     <link href="tabcardsslider.css" rel="stylesheet">
     <link href="assets/slick/slick.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 </head>
 
 <body class="w-100">
@@ -149,6 +149,7 @@
             </div>
         </section>
         <!-- Header Section -->
+        <!-- tabcardslider Section -->
         <section class="tabcardsslider">
             <div class="container">
                 <div class="Day-slider">
@@ -476,6 +477,7 @@
                 </div>
             </div>
         </section>
+        <!-- tabcardslider Section -->
     </div>
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
