--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="navbar_and_violater.css" rel="stylesheet">
-    <link href="header.css" rel="stylesheet">
-    <link href="tabcardsslider.css" rel="stylesheet">
+    <link href="./css/navbar_and_violater.css" rel="stylesheet">
+    <link href="./css/header.css" rel="stylesheet">
+    <link href="./css/tabcardsslider.css" rel="stylesheet">
+    <link href="./css/recommended.css" rel="stylesheet">
     <link href="assets/slick/slick.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 </head>
@@ -478,6 +479,16 @@
             </div>
         </section>
         <!-- tabcardslider Section -->
+        <section class="recommended">
+            <div class="container">
+                <img src="assets/images/dashboard/free-kinderpas.png" alt="" class="kinderflower">
+                <div class="referalBox">
+                    <span>Give a month of Pass Free!
+                    <button>REFER NOW</button>
+                    </span>
+                </div>
+            </div>
+        </section>
     </div>
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
@@ -486,7 +497,7 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="assets/slick/slick.min.js"></script>
-    <script type="text/javascript" src="slick_init.js"></script>
+    <script type="text/javascript" src="js/slick_init.js"></script>
 </body>
 
 </html>
