Made referal box

--- a/index.html
+++ b/index.html
@@ -481,10 +481,10 @@
         <!-- tabcardslider Section -->
         <section class="recommended">
             <div class="container">
-                <img src="assets/images/dashboard/free-kinderpas.png" alt="" class="kinderflower">
                 <div class="referalBox">
-                    <span>Give a month of Pass Free!
-                    <button>REFER NOW</button>
+                <img src="assets/images/dashboard/free-kinderpas.png" alt="" class="kinderflower">
+                <span class = "span">Give a month of Pass Free!
+                    <button class="referalbutton">REFER NOW</button>
                     </span>
                 </div>
             </div>
