Responsive referral Card

--- a/index.html
+++ b/index.html
@@ -482,10 +482,19 @@
         <section class="recommended">
             <div class="container">
                 <div class="referalBox">
-                <img src="assets/images/dashboard/free-kinderpas.png" alt="" class="kinderflower">
-                <span class = "span">Give a month of Pass Free!
-                    <button class="referalbutton">REFER NOW</button>
+                    <img src="assets/images/dashboard/free-kinderpas.png" alt="" class="kinderflower">
+                    <span class = "span">Give a month of Pass Free!
+                        <button class="referalbutton">REFER NOW</button>
                     </span>
+                </div>
+                <div class="recommendedText">
+                    <h4 class="recommendedtext">Recommended Classes</h4>
+                </div>
+                <div class="recommend1">
+                    
+                </div>
+                <div class="recommend2">
+                    
                 </div>
             </div>
         </section>
