made desktop recommended wrap

--- a/index.html
+++ b/index.html
@@ -480,22 +480,83 @@
         </section>
         <!-- tabcardslider Section -->
         <section class="recommended">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="referalBox">
                     <img src="assets/images/dashboard/free-kinderpas.png" alt="" class="kinderflower">
                     <span class = "span">Give a month of Pass Free!
                         <button class="referalbutton">REFER NOW</button>
                     </span>
                 </div>
-                <div class="recommendedText">
-                    <h4 class="recommendedtext">Recommended Classes</h4>
+                <div class="recommendedElements">
+                    <div class="leftElements">
+                        <h4 class="recommendedtext">Recommended Classes</h4>
+                        <div class="seeall">See all the courses that Jason will love!</div>
+                        <button class="viewallbutton">
+                            VIEW ALL CLASSES
+                        </button>
+                    </div>
+                    <div class="rightelements">
+                        <div class="recommend1">
+                            <div class="card">
+                                <img class="card-img-top" src="assets/images/dashboard/img01.jpg" alt="Card image cap">
+                                <div class = "spandetailsContainer">
+                                    <span class="spandetails"> 
+                                        <img src="assets/images/dashboard/videoicon.png" alt="" class="videocon">
+                                        5 Sessions
+                                        <div class="bby">
+                                            <img src="assets/images/dashboard/babyicon.png" alt="" class="bbycon">
+                                            3-5
+                                        </div>
+                                    </span>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Brain Builders</h5>
+                                    <p class="card-text">By Shyam Kumar qwertyuiop</p>
+                                    <div class="cardcategorty">
+                                        Cognitive  |  Social
+                                    </div>
+                                    <span class="line"></span>
+                                    <div class="PILL yellowpill">
+                                        Playtime
+                                    </div>
+                                    <div class="PILL rosepill">
+                                        Crafts
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="recommend2">
+                            <div class="card">
+                                <img class="card-img-top" src="assets/images/dashboard/img03.jpg" alt="Card image cap">
+                                <div class = "spandetailsContainer">
+                                    <span class="spandetails"> 
+                                        <img src="assets/images/dashboard/videoicon.png" alt="" class="videocon">
+                                        5 Sessions
+                                        <div class="bby">
+                                            <img src="assets/images/dashboard/babyicon.png" alt="" class="bbycon">
+                                            3-5
+                                        </div>
+                                    </span>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Brain Builders</h5>
+                                    <p class="card-text">By Shyam Kumar qwertyuiop</p>
+                                    <div class="cardcategorty">
+                                        Cognitive  |  Social
+                                    </div>
+                                    <span class="line"></span>
+                                    <div class="PILL yellowpill">
+                                        Playtime
+                                    </div>
+                                    <div class="PILL rosepill">
+                                        Crafts
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="recommend1">
-                    
-                </div>
-                <div class="recommend2">
-                    
-                </div>
+
             </div>
         </section>
     </div>
