--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
         </section>
         <!-- tabcardslider Section -->
         <section class="recommended">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="referalBox">
                     <img src="assets/images/dashboard/free-kinderpas.png" alt="" class="kinderflower">
                     <span class = "span">Give a month of Pass Free!
